[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.11",
  "numpy>=1.24",
]
build-backend = "scikit_build_core.build"

[project]
name = "pangolin_fast"
version = "0.1.0"
description = "Fast Pangolin-backed realtime 3D viewer for Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
]

[tool.scikit-build]
cmake.version = ">=3.23"
ninja.version = ">=1.11"
wheel.packages = ["pangolin_fast"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
VCPKG_TARGET_TRIPLET = "x64-windows"
